skills, services, projects added, NO css

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="about__container container grid">
         <div class="about__data">
           <h3 class="about__subtitle">About <span>Me</span></h3>
-          <h1 class="about__title">I'm Guillermo de Andrés</h1>
+          <h2 class="about__title">I'm Guillermo de Andrés</h2>
           <h3 class="about__subtitle">Computer Science</h3>
           <p class="about__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta sed tempora ut
             enim? Eaque veniam ea vel maxime dicta perspiciatis excepturi atque dolore! Repudiandae voluptates
@@ -75,10 +75,11 @@
         <div class="about__image"></div>
       </div>
     </section>
+
     <section class="skills section" id="skills">
       <div class="skills__container container grid">
-        <h3 class="skills__subtitle">My Favourite <span>Skills</span></h3>
-        <h1 class="skills__title">My Skills</h1>
+        <h3 class="section__subtitle">My Favourite <span>Skills</span></h3>
+        <h2 class="section__title">My Skills</h2>
 
         <div class="skills_content">
           <ol class="skills__block">
@@ -87,21 +88,104 @@
             <li class="skills__item">Java</li>
             <li class="skills__item">SQL</li>
           </ol>
-          <ol class="skills__block">
+          <ol class="skills__block" start="5">
             <li class="skills__item">HTML</li>
             <li class="skills__item">JavaScript</li>
             <li class="skills__item">CSS</li>
             <li class="skills__item">Django</li>
           </ol>
         </div>
-
       </div>
     </section>
-    <section class="services section" id="services"></section>
-    <section class="projects section" id="projects"></section>
+
+
+    <section class="services section" id="services">
+      <div class="services__container container grid">
+        <h3 class="section__subtitle">My <span>Services</span></h3>
+        <h2 class="section__title">What I do?</h2>
+
+        <div class="services__data">
+          <article class="services__card">
+            <h3 class="services__title">Data Analyst</h3>
+            <p class="services__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis non
+              repudiandae quibusdam. Asperiores, quisquam? Est placeat tenetur nulla, ipsum, dolores saepe quibusdam,
+              odit hic distinctio deleniti sit dicta alias odio?</p>
+          </article>
+          <article class="services__card">
+            <h3 class="services__title">DJANGO Developer</h3>
+            <p class="services__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis non
+              repudiandae quibusdam. Asperiores, quisquam? Est placeat tenetur nulla, ipsum, dolores saepe quibusdam,
+              odit hic distinctio deleniti sit dicta alias odio?</p>
+          </article>
+          <article class="services__card">
+            <h3 class="services__title">3D Model</h3>
+            <p class="services__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis non
+              repudiandae quibusdam. Asperiores, quisquam? Est placeat tenetur nulla, ipsum, dolores saepe quibusdam,
+              odit hic distinctio deleniti sit dicta alias odio?</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="projects section" id="projects">
+      <div class="projects__container container grid">
+
+        <h3 class="section__subtitle">My <span>Jobs</span></h3>
+        <h2 class="section__title">Recent Projects</h2>
+
+        <div class="projects__data">
+          <article class="project__card">
+            <h3 class="project__title">Project1</h3>
+            <p class="project__description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi doloremque a nihil? Magni, placeat. Hic
+              illo, provident nemo, eius officiis saepe quo totam temporibus aut expedita dolore. Quasi, animi alias!
+            </p>
+          </article>
+
+          <article class="project__card">
+            <h3 class="project__title">Project2</h3>
+            <p class="project__description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi doloremque a nihil? Magni, placeat. Hic
+              illo, provident nemo, eius officiis saepe quo totam temporibus aut expedita dolore. Quasi, animi alias!
+            </p>
+          </article>
+
+          <article class="project__card">
+            <h3 class="project__title">Project3</h3>
+            <p class="project__description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi doloremque a nihil? Magni, placeat. Hic
+              illo, provident nemo, eius officiis saepe quo totam temporibus aut expedita dolore. Quasi, animi alias!
+            </p>
+          </article>
+
+          <article class="project__card">
+            <h3 class="project__title">Project4</h3>
+            <p class="project__description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi doloremque a nihil? Magni, placeat. Hic
+              illo, provident nemo, eius officiis saepe quo totam temporibus aut expedita dolore. Quasi, animi alias!
+            </p>
+          </article>
+
+          <article class="project__card">
+            <h3 class="project__title">Project5</h3>
+            <p class="project__description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi doloremque a nihil? Magni, placeat. Hic
+              illo, provident nemo, eius officiis saepe quo totam temporibus aut expedita dolore. Quasi, animi alias!
+            </p>
+          </article>
+
+          <article class="project__card">
+            <h3 class="project__title">Project6</h3>
+            <p class="project__description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi doloremque a nihil? Magni, placeat. Hic
+              illo, provident nemo, eius officiis saepe quo totam temporibus aut expedita dolore. Quasi, animi alias!
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
     <section class="contact section" id="contact"></section>
   </main>
-
 </body>
 
 </html>
