--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list" id="nav-list">
           <li class="nav__item">
-            <a href="#" class="nav__link">Home</a>
+            <a href="#home" class="nav__link">Home</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">About</a>
+            <a href="#about" class="nav__link">About</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Services</a>
+            <a href="#services" class="nav__link">Services</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Projects</a>
+            <a href="#projects" class="nav__link">Projects</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Contact</a>
+            <a href="#contact" class="nav__link">Contact</a>
           </li>
         </ul>
 
@@ -45,43 +45,133 @@
   <main class="main" id="main">
     <section class="home section" id="home">
       <div class="home__container container grid">
-        <div class="home__data" id="home-data">
-          <h3 class="home__subtitle" id="home__subtitle">
-            Hello <span>I'm</span>
-          </h3>
-          <h1 class="home__title">Guillermo de Andrés</h1>
-          <h3 class="home__education">Computer Science</h3>
-          <p class="home__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore non quidem sint?
-            Iure ab recusandae ipsa obcaecati ipsum harum, hic voluptate aut iste sequi, aperiam dicta dolorem sed,
-            voluptatem delectus.</p>
-          <a href="#" class="home__contact">Contact me!</a>
+        <div class="home__content">
+          <div class="home__data">
+            <h3 class="home__subtitle">
+              Hello, <span> I'm</span>
+            </h3>
+            <h1 class="home__title">Guillermo de Andrés</h1>
+            <h3 class="home__education">Computer Science</h3>
+            <p class="home__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptates beatae deserunt
+              aperiam minus asperiores itaque vitae exercitationem delectus, ipsam consequuntur id laborum
+              minima totam eius quae ut earum quos?
+            </p>
+            <a href="#contact" class="button">Contact me!</a>
+          </div>
+
+          <div class="home__social">
+            <a href="https://github.com/Willygap1572" target="_blank" class="home__social-link">
+              <i class="ri-github-fill"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/guillermo-de-andrés-pérez-137339226/" target="_blank"
+              class="home__social-link">
+              <i class="ri-linkedin-box-fill"></i>
+            </a>
+          </div>
         </div>
-        <!--TODO-->
-        <div class="home__image"></div>
+        <div class="home__image">
+          <svg class="home__blob" viewBox="0 0 550 591" xmlns="http://www.w3.org/2000/svg">
+            <mask id="maskBlob" mask-type="alpha">
+              <path d="M263 47.1782C270.426 42.891 279.574 42.891 287 47.1782L501.157 
+                   170.822C508.583 175.109 513.157 183.032 513.157 191.606V438.894C513.157 
+                   447.468 508.583 455.391 501.157 459.678L287 583.322C279.574 587.609 270.426 
+                   587.609 263 583.322L48.843 459.678C41.4174 455.391 36.843 447.468 36.843 
+                   438.894V191.606C36.843 183.032 41.4174 175.109 48.843 170.822L263 47.1782Z" />
+            </mask>
+            <g mask="url(#maskBlob)">
+              <path d="M263 47.1782C270.426 42.891 279.574 42.891 287 47.1782L501.157 
+                   170.822C508.583 175.109 513.157 183.032 513.157 191.606V438.894C513.157 
+                   447.468 508.583 455.391 501.157 459.678L287 583.322C279.574 587.609 270.426 
+                   587.609 263 583.322L48.843 459.678C41.4174 455.391 36.843 447.468 36.843 
+                   438.894V191.606C36.843 183.032 41.4174 175.109 48.843 170.822L263 47.1782Z" />
+
+              <rect x="37" width="476" height="630" fill="url(#pattern0)" />
+            </g>
+
+            <rect x="37" width="476" height="300" fill="url(#pattern1)" />
+
+            <defs>
+              <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+                <use href="#imageBlob" transform="matrix(0.00143057 0 0 0.00108108 0.0404062 0)" />
+              </pattern>
+
+              <pattern id="pattern1" patternContentUnits="objectBoundingBox" width="1" height="1">
+                <use href="#imageBlob" transform="matrix(0.00143057 0 0 0.00226984 0.0404062 0)" />
+              </pattern>
+
+              <!-- Insert your profile (recommended size: 640 x 940) -->
+              <image class="home__img" id="imageBlob" width="640" height="925" href="assets/img/gde-andr.png" />
+            </defs>
+          </svg>
+        </div>
       </div>
     </section>
 
     <section class="about section" id="about">
       <div class="about__container container grid">
         <div class="about__data">
-          <h3 class="about__subtitle">About <span>Me</span></h3>
-          <h2 class="about__title">I'm Guillermo de Andrés</h2>
-          <h3 class="about__subtitle">Computer Science</h3>
-          <p class="about__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta sed tempora ut
+          <h3 class="section__subtitle">My <span>Intro</span></h3>
+          <h2 class="section__title">About Me</h2>
+          <p class="section__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta sed tempora
+            ut
             enim? Eaque veniam ea vel maxime dicta perspiciatis excepturi atque dolore! Repudiandae voluptates
             reiciendis quis assumenda deserunt mollitia?</p>
+          <a href="#contact" class="button">Contact me!</a>
         </div>
-        <!--TODO-->
-        <div class="about__image"></div>
+
+        <div class="about__image">
+          <svg class="about__blob" viewBox="0 0 550 592" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <mask id="maskBorder" mask-type="alpha">
+              <path d="M263 48.1782C270.426 43.891 279.574 43.891 287 48.1782L501.157 
+               171.822C508.583 176.109 513.157 184.032 513.157 192.606V439.894C513.157 
+               448.468 508.583 456.391 501.157 460.678L287 584.322C279.574 588.609 
+               270.426 588.609 263 584.322L48.843 460.678C41.4174 456.391 36.843 448.468 36.843 
+               439.894V192.606C36.843 184.032 41.4174 176.109 48.843 171.822L263 48.1782Z" fill="black" />
+            </mask>
+            <g mask="url(#maskBorder)">
+              <rect x="37" width="476" height="630" fill="url(#pattern2)" />
+
+              <path d="M285 51.6423L499.157 175.286C505.345 178.859 509.157 185.461 509.157 
+               192.606V439.894C509.157 447.039 505.345 453.641 499.157 457.214L285 
+               580.858C278.812 584.43 271.188 584.43 265 580.858L50.843 457.214C44.655 453.641 
+               40.843 447.039 40.843 439.894V192.606C40.843 185.461 44.655 178.859 50.843 
+               175.286L265 51.6423C271.188 48.0697 278.812 48.0696 285 51.6423Z" stroke="black" stroke-width="10" />
+            </g>
+
+            <rect x="37" width="476" height="300" fill="url(#pattern3)" />
+
+            <defs>
+              <pattern id="pattern2" patternContentUnits="objectBoundingBox" width="1" height="1">
+                <use href="#imageBorder" transform="matrix(0.00143057 0 0 0.00108108 0.0404062 0)" />
+              </pattern>
+
+              <pattern id="pattern3" patternContentUnits="objectBoundingBox" width="1" height="1">
+                <use href="#imageBorder" transform="matrix(0.00143057 0 0 0.00226984 0.0404062 0)" />
+              </pattern>
+
+              <!-- Insert your profile (recommended size: 640 x 940) -->
+              <image class="about__img" id="imageBorder" width="640" height="940" href="assets/img/gde-andr.png" />
+            </defs>
+          </svg>
+        </div>
       </div>
     </section>
 
     <section class="skills section" id="skills">
       <div class="skills__container container grid">
-        <h3 class="section__subtitle">My Favourite <span>Skills</span></h3>
-        <h2 class="section__title">My Skills</h2>
+        <div class="skills__data">
+          <h3 class="section__subtitle">Favourite <span>Skills</span></h3>
+          <h2 class="section__title">My Skills</h2>
 
-        <div class="skills_content">
+          <p class="section__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam neque voluptate inventore accusantium
+            similique
+            rerum soluta molestias dolor quod sequi delectus aperiam asperiores quo velit nihil, totam at. Amet, earum?
+          </p>
+
+        </div>
+        <div class="skills__content">
           <ol class="skills__block">
             <li class="skills__item">C</li>
             <li class="skills__item">Pyhton</li>
@@ -107,18 +197,21 @@
         <div class="services__data">
           <article class="services__card">
             <h3 class="services__title">Data Analyst</h3>
+            <i class="ri-pie-chart-line services__icon"></i>
             <p class="services__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis non
               repudiandae quibusdam. Asperiores, quisquam? Est placeat tenetur nulla, ipsum, dolores saepe quibusdam,
               odit hic distinctio deleniti sit dicta alias odio?</p>
           </article>
           <article class="services__card">
             <h3 class="services__title">DJANGO Developer</h3>
+            <i class="ri-code-s-slash-line services__icon"></i>
             <p class="services__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis non
               repudiandae quibusdam. Asperiores, quisquam? Est placeat tenetur nulla, ipsum, dolores saepe quibusdam,
               odit hic distinctio deleniti sit dicta alias odio?</p>
           </article>
           <article class="services__card">
             <h3 class="services__title">3D Model</h3>
+            <i class="ri-blender-fill services__icon"></i>
             <p class="services__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis non
               repudiandae quibusdam. Asperiores, quisquam? Est placeat tenetur nulla, ipsum, dolores saepe quibusdam,
               odit hic distinctio deleniti sit dicta alias odio?</p>
